[package]
name = "orml-bencher"
description = "Provide macro to benchmark pallets."
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/bencher"
license = "Apache-2.0"
version = "0.4.1-dev"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
linregress = { version = "0.4.0", optional = true }
serde = { version = "1.0.119", optional = true, features = ['derive'] }
serde_json = {version = "1.0.64", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"], default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false, optional = true }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false, features = ["wasmtime"], optional = true }
sc-executor-common = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", optional = true }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false, features = ["with-kvdb-rocksdb"], optional = true }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }

[features]
default = ["std"]
std = [
    "linregress",
    "serde/std",
    "serde_json/std",
    "codec/std",
    "sp-core/std",
    "sp-std/std",
    "sp-io/std",
    "sp-runtime-interface/std",
    "sp-state-machine/std",
    "sc-executor/std",
    "sc-executor-common",
    "sc-client-db",
    "frame-benchmarking/std",
]
