[package]
name = "orml-benchmarking"
description = "Provide macro to benchmark Substrate runtime."
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/benchmarking"
license = "Apache-2.0"
version = "0.4.1-dev"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
log = { version = "0.4.20", default-features = false }
paste = "1.0.7"
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", optional = true }

frame-benchmarking = { git = "https://github.com/mangata-finance/polkadot-sdk", default-features = false , branch = "develop" }
frame-support = { git = "https://github.com/mangata-finance/polkadot-sdk", default-features = false , branch = "develop" }
sp-api = { git = "https://github.com/mangata-finance/polkadot-sdk", default-features = false , branch = "develop" }
sp-io = { git = "https://github.com/mangata-finance/polkadot-sdk", default-features = false , branch = "develop" }
sp-runtime = { git = "https://github.com/mangata-finance/polkadot-sdk", default-features = false , branch = "develop" }
sp-runtime-interface = { git = "https://github.com/mangata-finance/polkadot-sdk", default-features = false , branch = "develop" }
sp-std = { git = "https://github.com/mangata-finance/polkadot-sdk", default-features = false , branch = "develop" }
sp-storage = { git = "https://github.com/mangata-finance/polkadot-sdk", default-features = false , branch = "develop" }

[dev-dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
hex-literal = "0.4.1"

frame-system = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }

[features]
default = [ "std" ]
std = [
	"serde",

	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"log/std",
	"scale-info/std",
	"sp-api/std",
	"sp-io/std",
	"sp-runtime-interface/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-storage/std",
]
