[package]
name = "orml-benchmarking"
description = "Provide macro to benchmark Substrate runtime."
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/benchmarking"
license = "Apache-2.0"
version = "0.7.0"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2021"

[dependencies]
parity-scale-codec = { workspace = true }
log = { workspace = true }
paste = "1.0.7"
scale-info = { workspace = true }
serde = { workspace = true, optional = true }

frame-benchmarking = { workspace = true }
frame-support = { workspace = true }
sp-api = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-runtime-interface = { workspace = true }
sp-std = { workspace = true }
sp-storage = { workspace = true }

[dev-dependencies]
hex-literal = "0.4.1"

frame-system = { workspace = true, features = ["std"] }

[features]
default = [ "std" ]
std = [
	"frame-benchmarking/std",
	"frame-support/std",
	"log/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde",
	"sp-api/std",
	"sp-io/std",
	"sp-runtime-interface/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-storage/std",
]
